2004-11-26 Alain Magloire
	Final fix for PR 79452
	* cdi/org/eclipose/cdt/debug/mi/core/cdi/BreapointManager.java

2004-11-26 Alain Magloire
	Fix for PR 79582
	* src/org/eclipse/cdt/debug/mi/core/CygwinGDBCDIDebugger.java
	* src/org/eclipse/cdt/debug/mi/core/GDBServerCDIDebugger.java

2004-11-24 Alain Magloire
	Make the terminate() more responsive when gdb is shuting down.
	See long discussion part of the 77435 fixes and 40087.
	
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/ExpressionManager.java
	* mi/org/eclipse/cdt/debug/core/MIInferior.java

2004-11-23 Alain Magloire
	Tentative fix for 77435
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/SourceManager.java

2004-11-19 Alain Magloire
	Protect agains possible NPE.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/RegisterManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/SourceManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/VariableDescriptor.java

2004-11-19 Alain Magloire
	Use the qualified name when creating a register.
	Destroy the corresponding gdb variable on register's disposal.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/RegisterManager.java
	
	Added the "dispose" method.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Register.java

2004-11-19 Alain Magloire
	RegisterManager.findRegister() was not implemented correctly
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/RegisterManager.java

2004-11-19 Alain Magloire
	No need for stackframe when creating the Type class,
	but rather use the target in the constructor.

2004-11-19 Alain Magloire
	Fix for 78816
	* src/org/eclipse/cdt/debug/mi/core/MIPlugin.java

2004-11-19 Alain Magloire

	Clear the confusion about sublist of stackframes.
	PR 78611

	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Thread.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/VariableManager.java

2004-11-17 David Inglis
	
	ICDIDebugger change to use IBinaryObject instead of IBnaryExecutable
	
	* stc/org/eclipse/cdt/debug/mi/core/GDBCDIDebugger.java
	
2004-11-17 Alain Magloire
	Fix for 78816