@@ -18,6 +18,7 @@ import java.util.List;
 import java.util.Map;
 
 import org.eclipse.cdt.debug.core.cdi.CDIException;
+import org.eclipse.cdt.debug.core.cdi.model.ICDIBreakpoint;
 import org.eclipse.cdt.debug.core.cdi.model.ICDISharedLibrary;
 import org.eclipse.cdt.debug.core.cdi.model.ICDITargetConfiguration;
 import org.eclipse.cdt.debug.mi.core.IMIConstants;
@@ -25,6 +26,7 @@ import org.eclipse.cdt.debug.mi.core.MIException;
 import org.eclipse.cdt.debug.mi.core.MIFormat;
 import org.eclipse.cdt.debug.mi.core.MIPlugin;
 import org.eclipse.cdt.debug.mi.core.MISession;
+import org.eclipse.cdt.debug.mi.core.cdi.model.Breakpoint;
 import org.eclipse.cdt.debug.mi.core.cdi.model.SharedLibrary;
 import org.eclipse.cdt.debug.mi.core.cdi.model.Target;
 import org.eclipse.cdt.debug.mi.core.command.CommandFactory;
@@ -35,10 +37,12 @@ import org.eclipse.cdt.debug.mi.core.command.MIGDBShow;
 import org.eclipse.cdt.debug.mi.core.command.MIGDBShowSolibSearchPath;
 import org.eclipse.cdt.debug.mi.core.command.MIInfoSharedLibrary;
 import org.eclipse.cdt.debug.mi.core.command.MISharedLibrary;
+import org.eclipse.cdt.debug.mi.core.event.MIBreakpointCreatedEvent;
 import org.eclipse.cdt.debug.mi.core.event.MIEvent;
 import org.eclipse.cdt.debug.mi.core.event.MISharedLibChangedEvent;
 import org.eclipse.cdt.debug.mi.core.event.MISharedLibCreatedEvent;
 import org.eclipse.cdt.debug.mi.core.event.MISharedLibUnloadedEvent;
+import org.eclipse.cdt.debug.mi.core.output.MIBreakpoint;
 import org.eclipse.cdt.debug.mi.core.output.MIGDBShowInfo;
 import org.eclipse.cdt.debug.mi.core.output.MIGDBShowSolibSearchPathInfo;
 import org.eclipse.cdt.debug.mi.core.output.MIInfo;
@@ -87,13 +91,46 @@ public class SharedLibraryManager extends Manager {
 	}
 
 	public void update(Target target) throws CDIException {
-		MISession mi = target.getMISession();
+		MISession miSession = target.getMISession();
+		Session session = (Session)target.getSession();
 		List eventList = updateState(target);
+		// A new Libraries loaded or something change, try to set the breakpoints.
+		if (eventList.size() > 0) {
+			BreakpointManager bpMgr = session.getBreakpointManager();
+			ICDIBreakpoint bpoints[] = null;
+			try {
+				bpoints = bpMgr.getDeferredBreakpoints(target);
+			} catch (CDIException e) {
+				bpoints = new ICDIBreakpoint[0];
+			}
+			for (int i = 0; i < bpoints.length; i++) {
+				if (bpoints[i] instanceof Breakpoint) {
+					Breakpoint bkpt = (Breakpoint)bpoints[i];
+					try {
+						boolean enable = bkpt.isEnabled();
+						bpMgr.setLocationBreakpoint(bkpt);
+						bpMgr.deleteFromDeferredList(bkpt);
+						bpMgr.addToBreakpointList(bkpt);
+						// If the breakpoint was disable in the IDE
+						// install it but keep it disable
+						if (!enable) {
+							bpMgr.disableBreakpoint(bkpt);
+						}
+						MIBreakpoint[] miBreakpoints = bkpt.getMIBreakpoints();
+						if (miBreakpoints != null && miBreakpoints.length > 0) {
+							eventList.add(new MIBreakpointCreatedEvent(miSession, miBreakpoints[0].getNumber()));
+						}
+					} catch (CDIException e) {
+						// ignore
+					}
+				}
+			}
+		}
 		MIEvent[] events = (MIEvent[])eventList.toArray(new MIEvent[0]);
-		mi.fireEvents(events);
+		miSession.fireEvents(events);
 	}
 
-	public List updateState(Target target) throws CDIException {
+	private List updateState(Target target) throws CDIException {
 		MISession miSession = target.getMISession();
 		ICDITargetConfiguration conf = target.getConfiguration();
 		if (!conf.supportsSharedLibrary()) {
